--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Fasthand&family=Roboto:wght@100;300;400;500;700;900&display=swap");
 
+/* Common Css */
+.YV-btn {
+  background-color: #222222;
+  color: #f1f1e3;
+  border-radius: 50%;
+  padding: 8px 10px;
+}
+.YV-hover-btn {
+  border-radius: 50%;
+  padding: 8px 10px;
+}
+.YV-propile-btn {
+  border-radius: 50%;
+  height: 32px;
+  width: 32px;
+}
 /*  */
 @tailwind base;
 @tailwind components;
