--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,30 @@
   height: 32px;
   width: 32px;
 }
+/* Scroll bar */
+
+/* Set the width and height of the scroll bar */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Customize the track (background) of the scroll bar */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+/* Customize the thumb (the draggable scrolling handle) of the scroll bar */
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+/* On hover, add a darker background color to the thumb */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
 /*  */
 @tailwind base;
 @tailwind components;
